Fix Alignement Tablette Boutons Contact

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -93,10 +93,6 @@ div.hero-body {
     padding-left: 5%;
 }
 
-.btn-centered {
-    padding-left: 25%;
-}
-
 .btn-centered .button+.button {
     margin-left: 80px;
 }
